# ai-gen-lab

./: README.md  app.py  claude_service.py  database.py  models.py  models_prompts.py  pyproject.toml  routes.py  test_export.md
instance/: claude_dashboard.db
static/css/: dashboard.css
static/js/: dashboard.js
templates/: 404.html  500.html  api_keys.html  base.html  costs.html  dashboard.html  error.html  generator.html  history.html  playground.html  prompts.html  shared.html
