[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.59.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "markdown>=3.8.2",
    "openai>=1.97.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "weasyprint>=66.0",
    "werkzeug>=3.1.3",
    "xhtml2pdf>=0.2.17",
]
